--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string-array name="quotes">
+    <item>"Yeet and Delete - David"</item>
+    <item>"To eat is to live, to live to grow, to grow to age, to age is to die, but food is food. - David"</item>
+    <item>"JAWAND - Jawand"</item>
+    <item>"SUUUUUUUUUS?!?!?!? - Sai"</item>
+    <item>"You can get away with not knowing someone's name for a surprisingly long time - Jawand"</item>
+    <item>"the zucc knows all - anonymous"</item>
     <item>"Life isn’t about getting and having, it’s about giving and being. - Kevin Kruse"</item>
     <item>"Whatever the mind of man can conceive and believe, it can achieve. - Napoleon Hill"</item>
     <item>"Strive not to be a success, but rather to be of value. - Albert Einstein"</item>
